--- a/Day_1/Activity_1_Descriptive_Stats/Solutions_Activity_1.qmd
+++ b/Day_1/Activity_1_Descriptive_Stats/Solutions_Activity_1.qmd
@@ -13,7 +13,8 @@ knitr::opts_chunk$set(echo = TRUE)
 
 library(mosaic)
 library(openintro)
-library(tidyverse)
+
+#library(tidyverse)
 ```
 
 1.  We should always attempt to understand our data first.
@@ -22,7 +23,7 @@ view births14 in the chunk below. You can also use the `?` operator to learn mor
 
 ```{r understand-data}
 
-view(births14)
+#view(births14)
 births14
 ?births14
 ```
