--- a/Day_3/day_3_main.qmd
+++ b/Day_3/day_3_main.qmd
@@ -3,6 +3,8 @@ title: "Day 3: Additional Topics"
 editor: visual
 ---
 
+Getting Data Into R
+
 Linear Regression
 
 -   Advanced: Logistic and Multiple Regression
