--- a/Day_3/day_3_main.qmd
+++ b/Day_3/day_3_main.qmd
@@ -3,7 +3,7 @@ title: "Day 3: Additional Topics"
 editor: visual
 ---
 
-Getting Data Into R
+[Getting Data Into R](./Importing-data.html)
 
 Linear Regression
 
