--- a/Day_2/day_2_main.qmd
+++ b/Day_2/day_2_main.qmd
@@ -59,4 +59,6 @@ Solutions
 
 [Activity 3](../Day_1/Activity_3_Categorical_Vars/LAB_WSDay1_SOLUTIONS_Categorical-Data_Scatterplots_Correlation.pdf)
 
+Notebook solutions soonish.
+
 [If you want to leave feedback or have ideas](https://docs.google.com/document/d/1YnoZr6WPz0dvW3B-PQ_dDob-ieUepgFqYbG8FOzJuFc/edit?usp=sharing)
